<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CA Sample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enterNum">Enter a number</string>
    <string name="Converter_app">Converter App</string>
    <string name="KmToMl">Kilometers to Miles</string>
 	<string name="KgToPnd">Kilograms to Pounds</string>
 	<string name="TheResults">The results will be displayed here</string>

</resources>
